# payroll

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  vercel.json
.claude/: settings.local.json
app/: build_log.txt  build_log_2.txt  build_log_3.txt  eslint.config.mjs  lint_log.txt  lint_log_2.txt  next.config.mjs  package.json
app/scripts/: generate_key_v2.js  rescue.js  rescue_funds_v2.js  verify_key.js
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/app/admin/: page.tsx
app/src/app/community/create/: page.tsx
app/src/app/create/: page.tsx
app/src/app/my-tickets/: page.tsx
app/src/app/raffle/[id]/: page.tsx
app/src/app/raffles/: page.tsx
app/src/app/winners/: page.tsx
app/src/components/: AnimatedCard.tsx  AnimatedCounter.tsx  BentoGrid.tsx  CardNav.css  CardNav.tsx  GlareHover.tsx  GlowingText.tsx  Header.tsx  Hero.tsx  HowItWorksSection.tsx  MagneticButton.tsx  Marquee.tsx  PageTransition.tsx  RaffleCard.tsx  RaffleFilter.tsx  RotatingText.tsx  SpinningWheel.tsx  Squares.tsx  Stats.tsx  TextType.tsx  TicketPurchase.tsx  ToastNotification.tsx  WinnersSection.tsx
app/src/components/ui/: Button.tsx
app/src/hooks/: usePayroll.ts
app/src/lib/: config.ts  idl.ts  priority.ts  raffleEngine.ts  raffleStorage.ts  serverWallet.ts  solanaPayment.ts  supabase.ts  supabaseAdmin.ts
app/src/providers/: AdminProvider.tsx  WalletProvider.tsx
app/src/types/: payroll.ts
programs/payroll/: Cargo.toml
programs/payroll/src/: admin.rs  constants.rs  errors.rs  lib.rs  security.rs  state.rs
tests/: payroll.ts
(+10 files in other folders)
