[package]
name = "payroll"
version = "0.1.0"
description = "PAYROLL - Solana Raffle Platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "payroll"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
